@@ -1,3 +1,8 @@
+TAG: littriageload-6-0-12-15
+DATE: 10/11/2018
+STAFF: lec
+CHANGES: TR12958/add littriage_discard folder
+
 TAG: littriageload-6-0-12-14
 TAG: littriageload-6-0-12-13
 TAG: littriageload-6-0-12-12
